    (tomas dot brastavicius at quantum dot lt, Pierrick)
  . Fixed bug #48465 (sys_get_temp_dir() possibly inconsistent when using 
    TMPDIR on Windows). (Pierre)
  . Fixed bug #54866 (incorrect accounting for realpath_cache_size) (Dustin Ward)
  . Fixed bug #54721 (Different Hashes on Windows, BSD and Linux on wrong Salt size) 
    (Pierre, os at irj dot ru)

- Apache2 Handler SAPI:
  . Fixed bug #54529 (SAPI crashes on apache_config.c:197).
    (hebergement at riastudio dot fr)

- cURL:
  . Added CURLINFO_REDIRECT_URL support. (Daniel Stenberg, Pierre)
  . Added support for CURLOPT_MAX_RECV_SPEED_LARGE and 
    CURLOPT_MAX_SEND_SPEED_LARGE. FR #51815. (Pierrick)

- DateTime extension:
  . Fixed bug #54340 (DateTime::add() method bug). (Adam)
  . Fixed bug #54316 (DateTime::createFromFormat does not handle trailing '|'
    correctly). (Adam)
  . Fixed bug #54283 (new DatePeriod(NULL) causes crash). (Felipe)

- DBA extension:
  . Fixed bug #54242 (dba_insert returns true if key already exists). (Felipe)

- Exif extesion:
  . Fixed bug #54121 (error message format string typo). (Ilia)

- Filter extension:
  . Added 3rd parameter to filter_var_array() and filter_input_array()
    functions that allows disabling addition of empty elements. (Ilia)
  . Fixed bug #53037 (FILTER_FLAG_EMPTY_STRING_NULL is not implemented). (Ilia)
  
- Interbase extension:
  . Fixed bug #54269 (Short exception message buffer causes crash). (Felipe)
  
- intl extension:
  . Implemented FR #54540 (Allow loading of arbitrary resource bundles when
    fallback is disabled). (David Zuelke, Stas)

- LDAP extension:
  . Fixed bug #53339 (Fails to build when compilng with gcc 4.5 and DSO
    libraries). (Clint Byrum, Raphael)

- libxml extension:
  . Fixed bug #54440 (libxml extension ignores default context). (Gustavo)

- mbstring extension:
  . Fixed bug #54494 (mb_substr() mishandles UTF-32LE and UCS-2LE). (Gustavo)

- MySQL Improved extension: